package NQuerySearch;

option optimize_for = SPEED;

message TSaasReqPropsTransport {
    message TStringArray {
        repeated string Value = 1;
    };
    message TSubkeyInferiorityValue {
        optional int32 Key1 = 1;
        optional string Key2 = 2;
        optional uint32 Value = 3;
    };
    message TStructKeyInferiorityValue {
        optional string Key1 = 1;
        optional string Key2 = 2;
        optional uint32 Value = 3;
    };

    map<string, string> UrlsMap = 1;
    map<string, string> ZDocIdsMap = 2;
    map<string, TStringArray> UrlsNoCgiMap = 3;
    map<string, TStringArray> UrlMasksMap = 4;
    repeated TSubkeyInferiorityValue SubkeyInferiority = 5;
    repeated TStructKeyInferiorityValue StructKeyInferiority = 6;
    optional bool IsRecommendationsRequest = 7;
};
